--- a/wizards.cabal
+++ b/wizards.cabal
@@ -10,7 +10,7 @@ Name:                wizards
 Version:             0.1
 
 -- A short (one-line) description of the package.
-Synopsis:            Simple line-input prompt wizards for interactive console applications
+Synopsis:            High level, generic library for interrogative user interfaces
 
 -- A longer description of the package.
 -- Description:         
@@ -27,6 +27,26 @@ Author:              Liam O'Connor-Davis
 -- An email address to which users can send suggestions, bug reports,
 -- and patches.
 Maintainer:          liamoc@cse.unsw.edu.au
+
+
+Description: @wizards@ is a package designed for the quick and painless development of interrogative programs, which
+  revolve around a \"dialogue\" with the user, who is asked a series of questions in a sequence, much like an 
+  installation wizard.
+  .
+  Everything from interactive shell scripts, to installation wizards, to full-blown shells can be implemented with
+  the support of @wizards@.
+  .
+  It is developed transparently on top of a Prompt monad, which separates out the semantics of the program from any
+  particular interface. A variety of backends exist, including "System.Console.Wizard.Haskeline" and 
+  "System.Console.Wizard.BasicIO". It is also possible to write your own backends. While both built-in backends 
+  operate on a console, there is no reason why @wizards@ cannot also be used for making GUI wizard interfaces.
+  .
+  .
+  See the github page for examples on usage:
+  .
+  <http://www.github.com/liamoc/wizards>
+  .
+  For creating backends, the module "System.Console.Wizard.Internal" has a brief tutorial. 
 
 -- A copyright notice.
 -- Copyright:           
@@ -45,10 +65,13 @@ Cabal-version:       >=1.2
 
 Library
   -- Modules exported by the library.
-  -- Exposed-modules:     
+  Exposed-modules: System.Console.Wizard
+                   System.Console.Wizard.Internal
+                   System.Console.Wizard.Haskeline
+                   
   
   -- Packages needed in order to build this package.
-  -- Build-depends:       
+  Build-depends: base == 4.*, haskeline == 0.6.*, mtl == 2.0.*, transformers == 0.2.*, MonadPrompt == 1.0.*
   
   -- Modules not exported by this package.
   -- Other-modules:       
