Added BasicIO backend
BasicIO backend does not support passwords or default text, but it is very simply defined in terms of standard library functions, so is likely to be the most widely compatible.

--- a/wizards.cabal
+++ b/wizards.cabal
@@ -68,6 +68,7 @@ Library
   Exposed-modules: System.Console.Wizard
                    System.Console.Wizard.Internal
                    System.Console.Wizard.Haskeline
+                   System.Console.Wizard.BasicIO
                    
   
   -- Packages needed in order to build this package.
