--- a/wizards.cabal
+++ b/wizards.cabal
@@ -60,7 +60,16 @@ Build-type:          Simple
 -- Extra-source-files:  
 
 -- Constraint on the version of Cabal needed to build this package.
-Cabal-version:       >=1.2
+Cabal-version:       >=1.6
+
+source-repository head
+   type:     git   
+   location: git://github.com/liamoc/wizards.git
+   
+source-repository this
+   type:     git   
+   location: git://github.com/liamoc/wizards.git
+   tag:      0.1
 
 
 Library
