--- a/wizards.cabal
+++ b/wizards.cabal
@@ -83,7 +83,7 @@ Library
   Extensions: OverlappingInstances                   
   
   -- Packages needed in order to build this package.
-  Build-depends: base == 4.*, haskeline == 0.6.*, mtl == 2.0.*, transformers == 0.2.*, control-monad-free ==0.5.*, containers == 0.4.*
+  Build-depends: base == 4.*, haskeline >= 0.6 && < 0.8, mtl >= 2.0 && < 2.2, transformers >= 0.1 && < 0.4, control-monad-free ==0.5.*, containers >= 0.4 && < 0.6
   
   -- Modules not exported by this package.
   -- Other-modules:       
